--- a/backend/danswer/chat/personas.yaml
+++ b/backend/danswer/chat/personas.yaml
@@ -5,7 +5,7 @@ personas:
   # this is for DanswerBot to use when tagged in a non-configured channel
   # Careful setting specific IDs, this won't autoincrement the next ID value for postgres
   - id: 0
-    name: "Danswer"
+    name: "NeuxAI/私有知识AI"
     description: >
       Assistant with access to documents from your Connected Sources.
     # Default Prompt objects attached to the persona, see prompts.yaml
@@ -40,7 +40,7 @@ personas:
 
 
   - id: 1
-    name: "GPT"
+    name: "OnlyLLM"
     description: >
       Assistant with no access to documents. Chat with just the Language Model.
     prompts:
@@ -53,7 +53,7 @@ personas:
 
 
   - id: 2
-    name: "Paraphrase"
+    name: "ExactCite Assistant/原文引用助手"
     description: >
       Assistant that is heavily constrained and only provides exact quotes from Connected Sources.
     prompts:
