--- a/deployment/docker_compose/docker-compose.dev.yml
+++ b/deployment/docker_compose/docker-compose.dev.yml
@@ -5,6 +5,12 @@ services:
     build:
       context: ../../backend
       dockerfile: Dockerfile
+      args:
+        # 中国区镜像
+        - PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        - PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: >
       /bin/sh -c "alembic upgrade head &&
       echo \"Starting Danswer Api Server\" &&
@@ -95,6 +101,11 @@ services:
     build:
       context: ../../backend
       dockerfile: Dockerfile
+      args:
+        - PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        - PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: /usr/bin/supervisord
     depends_on:
       - relational_db
@@ -178,13 +189,6 @@ services:
       - LOG_LEVEL=${LOG_LEVEL:-info}  # Set to debug to get more fine-grained logs
       - LOG_ALL_MODEL_INTERACTIONS=${LOG_ALL_MODEL_INTERACTIONS:-}  # Log all of the prompts to the LLM
       - LOG_VESPA_TIMING_INFORMATION=${LOG_VESPA_TIMING_INFORMATION:-}
-<<<<<<< HEAD
-    volumes:
-      # - /Users/peng/Dev/RAGSolutions/danswer/backend/danswer :/app/danswer #挂载本地目录
-      - local_dynamic_storage:/home/storage
-      - file_connector_tmp_storage:/home/file_connector_storage
-=======
->>>>>>> f087d3eac05fae0cd4a2636120fb3ee743a4b8ed
     extra_hosts:
       - "host.docker.internal:host-gateway"
     logging:
@@ -204,21 +208,24 @@ services:
         - NEXT_PUBLIC_NEW_CHAT_DIRECTS_TO_SAME_PERSONA=${NEXT_PUBLIC_NEW_CHAT_DIRECTS_TO_SAME_PERSONA:-false}
         - NEXT_PUBLIC_POSITIVE_PREDEFINED_FEEDBACK_OPTIONS=${NEXT_PUBLIC_POSITIVE_PREDEFINED_FEEDBACK_OPTIONS:-}
         - NEXT_PUBLIC_NEGATIVE_PREDEFINED_FEEDBACK_OPTIONS=${NEXT_PUBLIC_NEGATIVE_PREDEFINED_FEEDBACK_OPTIONS:-}
+        - NPM_REGISTRY=https://registry.npmmirror.com
     depends_on:
       - api_server
     restart: always
     environment:
       - INTERNAL_URL=http://api_server:8080
       - WEB_DOMAIN=${WEB_DOMAIN:-}
-    # volumes:
-    #   - /Users/peng/Dev/RAGSolutions/danswer/web:/app  # 修改这里为你的本地 Next.js 项目路径
-
 
   inference_model_server:
     image: danswer/danswer-model-server:latest
     build:
       context: ../../backend
       dockerfile: Dockerfile.model_server
+      args:
+        - PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        - PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: >
       /bin/sh -c "if [ \"${DISABLE_MODEL_SERVER:-false}\" = \"True\" ]; then
         echo 'Skipping service...';
@@ -246,6 +253,11 @@ services:
     build:
       context: ../../backend
       dockerfile: Dockerfile.model_server
+      args:
+        - PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        - PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: >
       /bin/sh -c "if [ \"${DISABLE_MODEL_SERVER:-false}\" = \"True\" ]; then
         echo 'Skipping service...';
@@ -259,7 +271,6 @@ services:
       - INDEXING_ONLY=True
       # Set to debug to get more fine-grained logs
       - LOG_LEVEL=${LOG_LEVEL:-info}
-      - HF_ENDPOINT=https://hf-mirror.com
     volumes:
       # Not necessary, this is just to reduce download time during startup
       - model_cache_huggingface:/root/.cache/huggingface/
