--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -11,18 +11,23 @@ ARG DANSWER_VERSION=0.3-dev
 ENV DANSWER_VERSION=${DANSWER_VERSION}
 RUN echo "DANSWER_VERSION: ${DANSWER_VERSION}"
 
+ARG NPM_REGISTRY=https://registry.npmmirror.com
+
 # Step 1. Install dependencies only when needed
 FROM base AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+RUN apk add --no-cache libc6-compat build-base vips-dev python3
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
 COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
 RUN \
-  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-  elif [ -f package-lock.json ]; then npm ci; \
-  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i --frozen-lockfile; \
+  if [ -f yarn.lock ]; then \
+    yarn config set registry ${NPM_REGISTRY} && yarn --frozen-lockfile; \
+  elif [ -f package-lock.json ]; then \ 
+    npm config set registry ${NPM_REGISTRY} && npm ci; \
+  elif [ -f pnpm-lock.yaml ]; then \
+    yarn global add pnpm && pnpm config set registry ${NPM_REGISTRY} &&pnpm i --frozen-lockfile; \
   else echo "Lockfile not found." && exit 1; \
   fi
 
