--- a/deployment/docker_compose/docker-compose.dev.cn.yml
+++ b/deployment/docker_compose/docker-compose.dev.cn.yml
@@ -4,6 +4,12 @@ services:
     build:
       context: ../../backend
       dockerfile: Dockerfile
+      args:
+        # 中国区镜像
+        #- PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        #- PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: >
       /bin/sh -c "alembic upgrade head &&
       echo \"Starting Danswer Api Server\" &&
@@ -113,6 +119,11 @@ services:
     build:
       context: ../../backend
       dockerfile: Dockerfile
+      args:
+        #- PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        #- PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf
     depends_on:
       - relational_db
@@ -226,7 +237,7 @@ services:
         - NEXT_PUBLIC_NEGATIVE_PREDEFINED_FEEDBACK_OPTIONS=${NEXT_PUBLIC_NEGATIVE_PREDEFINED_FEEDBACK_OPTIONS:-}
         - NEXT_PUBLIC_DISABLE_LOGOUT=${NEXT_PUBLIC_DISABLE_LOGOUT:-}
         - NEXT_PUBLIC_DEFAULT_SIDEBAR_OPEN=${NEXT_PUBLIC_DEFAULT_SIDEBAR_OPEN:-}
-
+        - NPM_REGISTRY=https://registry.npmmirror.com
         # Enterprise Edition only
         - NEXT_PUBLIC_THEME=${NEXT_PUBLIC_THEME:-}
         # DO NOT TURN ON unless you have EXPLICIT PERMISSION from Danswer.
@@ -249,6 +260,11 @@ services:
     build:
       context: ../../backend
       dockerfile: Dockerfile.model_server
+      args:
+        - PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        - PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: >
       /bin/sh -c "if [ \"${DISABLE_MODEL_SERVER:-false}\" = \"True\" ]; then
         echo 'Skipping service...';
@@ -278,6 +294,11 @@ services:
     build:
       context: ../../backend
       dockerfile: Dockerfile.model_server
+      args:
+        - PIP_TRUSTED_HOST=${PIP_TRUSTED_HOST:-mirrors.cloud.tencent.com}
+        - PIP_INDEX_URL=${PIP_INDEX_URL:-https://mirrors.cloud.tencent.com/pypi/simple}
+        - HF_ENDPOINT=${HF_ENDPOINT:-https://hf-mirror.com}
+        - DEBIAN_MIRROR=${DEBIAN_MIRROR:-http://mirrors.cloud.tencent.com}
     command: >
       /bin/sh -c "if [ \"${DISABLE_MODEL_SERVER:-false}\" = \"True\" ]; then
         echo 'Skipping service...';
